--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Etch-A-Sketch!</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="etchASketch.js"defer></script>
+    <script src="script.js"defer></script>
 </head>
 
 <body>
-    
 
+    <button>New Sketchpad!</button>
 
     <div id="container"></div>
 
