Add click event listener to start drawing anywhere on sketchpad.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
 <body>
 
-    <button>New Sketchpad!</button>
-
-    <div id="container"></div>
-
+    <div class="header">
+        <h2>Click to start drawing!</h2>
+        <button>New Sketchpad!</button>
+    </div>
+    
+    <div class="pad">
+        <div id="container"></div>
+    </div>
+    
 </body>
 </html>
