Turn draw event into a function and add ability to draw with randomly generated colors at the click of a button.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <div class="header">
-        <button>New Sketchpad!</button>
+        <button id="newSketchpadButton">New Sketchpad!</button>
+        <button id="colorButton">Rainbow Remix!</button>
     </div>
     
     <div class="pad">
